# vercel-inc-bot

./: .env.example  README.md  pyproject.toml  requirements.txt  set_webhook.py
.claude/: settings.local.json
api/: app.py  cron.py  webhook.py
bot/: config.py  handlers.py  middleware.py  storage.py  texts.py
bot/ai/: __init__.py  provider.py  service.py
bot/ai/providers/: groq_provider.py
bot/prompts/: builder.py  dark_academia.py  few_shot.py  safety_rules.py  style_rules.py
src/: App.jsx  styles.css
src/components/: Atmosphere.jsx  Button.jsx  GothicCard.jsx  Placeholder.jsx  Screen.jsx  Thread.jsx
src/lib/: api.js  doors.js  screens.jsx  telegram.js
src/screens/: Alias.jsx  Archive.jsx  Countdown.jsx  Dark.jsx  Fortune.jsx  Home.jsx  Inbox.jsx  Keeper.jsx  Letter.jsx  Mirror.jsx  Mood.jsx  Raven.jsx  Ritual.jsx  Speak.jsx  Vow.jsx
